src/test/ui/imports/extern-prelude-extern-crate-fail.stderr
error[E0433]: failed to resolve. Use of undeclared type or module `two_macros`
  --> $DIR/extern-prelude-extern-crate-fail.rs:9:9
   |
LL |         two_macros::m!(); //~ ERROR failed to resolve. Use of undeclared type or module `two_macros`
   |         ^^^^^^^^^^ Use of undeclared type or module `two_macros`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
